@@ -15,23 +15,6 @@ ac_add_options --with-distribution-id=com.ubuntu
 %%if DEB_HOST_ARCH == armel
 ac_add_options --enable-thumb2
 %%endif
-%%if MOZ_OVERRIDE_SHLIBS == system
-ac_add_options --with-system-jpeg=/usr
-ac_add_options --with-system-png=/usr
-ac_add_options --with-system-zlib=/usr
-ac_add_options --with-system-bz2=/usr
-ac_add_options --with-system-libevent=/usr
-ac_add_options --enable-system-pixman
-ac_add_options --enable-system-ffi
-%%elif MOZ_OVERRIDE_SHLIBS == tree
-ac_add_options --without-system-jpeg
-ac_add_options --without-system-png
-ac_add_options --without-system-zlib
-ac_add_options --without-system-bz2
-ac_add_options --without-system-libevent
-ac_add_options --disable-system-pixman
-ac_add_options --disable-system-ffi
-%%endif
 %%ifdef MOZ_NO_OPTIMIZE
 ac_add_options --disable-optimize
 %%else
@@ -52,36 +35,6 @@ ac_add_options --enable-tests
 %%else
 ac_add_options --disable-tests
 ac_add_options --disable-ipdl-tests
-%%endif
-%%if MOZ_USE_CAIRO == system
-ac_add_options --enable-system-cairo
-%%elif MOZ_USE_CAIRO == tree
-ac_add_options --disable-system-cairo
-%%endif
-%%if MOZ_USE_NSPR == system
-ac_add_options --with-system-nspr
-%%elif MOZ_USE_NSPR == tree
-ac_add_options --without-system-nspr
-%%endif
-%%if MOZ_USE_NSS == system
-ac_add_options --with-system-nss
-%%elif MOZ_USE_NSS == tree
-ac_add_options --without-system-nss
-%%endif
-%%if MOZ_USE_SQLITE == tree
-ac_add_options --disable-system-sqlite
-%%elif MOZ_USE_SQLITE == system
-ac_add_options --enable-system-sqlite
-%%endif
-%%if MOZ_USE_HUNSPELL == tree
-ac_add_options --disable-system-hunspell
-%%elif MOZ_USE_HUNSPELL == system
-ac_add_options --enable-system-hunspell
-%%endif
-%%if MOZ_USE_VPX == tree
-ac_add_options --without-system-libvpx
-%%elif MOZ_USE_VPX == system
-ac_add_options --with-system-libvpx=/usr
 %%endif
 %%ifdef MOZ_ENABLE_BREAKPAD
 ac_add_options --enable-crashreporter
