@@ -6,9 +6,7 @@
 @MOZ_SDKDIR@/sdk/bin
 
 %%ifdef MOZ_LIBXUL_PKGCONFIG
-%%ifdef MOZ_TREE_NSPR
 debian/pkgconfig/mozilla-nspr.pc usr/lib/pkgconfig
-%%endif
 debian/pkgconfig/libxul.pc usr/lib/pkgconfig
 %%endif
 debian/pkgconfig/mozilla-plugin.pc usr/lib/pkgconfig
