@@ -2,17 +2,9 @@
 @MOZ_IDLDIR@ @MOZ_SDKDIR@/idl
 @MOZ_INCDIR@ @MOZ_SDKDIR@/include
 @MOZ_SDKDIR@/sdk/lib @MOZ_SDKDIR@/lib
-%%ifdef MOZ_TREE_NSPR
 @MOZ_LIBDIR@/libnspr4.so @MOZ_SDKDIR@/sdk/lib/libnspr4.so
 @MOZ_LIBDIR@/libplc4.so @MOZ_SDKDIR@/sdk/lib/libplc4.so
 @MOZ_LIBDIR@/libplds4.so @MOZ_SDKDIR@/sdk/lib/libplds4.so
-%%else
-usr/include/nspr @MOZ_INCDIR@/nspr
-usr/bin/nspr-config @MOZ_SDKDIR@/sdk/bin/nspr-config
-%%endif
-%%ifndef MOZ_TREE_CAIRO
-usr/include/cairo @MOZ_INCDIR@/cairo
-%%endif
 @MOZ_LIBDIR@/libmozalloc.so @MOZ_SDKDIR@/sdk/lib/libmozalloc.so
 @MOZ_LIBDIR@/libxpcom.so @MOZ_SDKDIR@/sdk/lib/libxpcom.so
 @MOZ_LIBDIR@/libxul.so @MOZ_SDKDIR@/sdk/lib/libxul.so
