@@ -10,8 +10,6 @@ MOZ_APP_BASENAME	:= firefox
 MOZ_MOZDIR		:=
 
 # Various build defaults
-# tree = use in-tree libs, system = use system libs
-MOZ_OVERRIDE_SHLIBS	?= 
 # 1 = Enable crashreporter (if supported)
 MOZ_ENABLE_BREAKPAD	?= 0
 # 1 = Disable official branding and crash reporter (the crash reporter builds but is not enabled in application.ini)
@@ -26,33 +24,6 @@ MOZ_WANT_UNIT_TESTS	?= 0
 MOZ_DEBUG		?= 0
 # 1 = Disable optimizations
 MOZ_NO_OPTIMIZE		?= 0
-
-# Whether to use in-tree or system libs
-# tree = force in-tree, system = force system, default = use upstream default
-MOZ_USE_CAIRO		?= default
-MOZ_USE_NSPR		?= default
-MOZ_USE_NSS		?= default
-MOZ_USE_SQLITE		?= default
-MOZ_USE_HUNSPELL	?= default
-MOZ_USE_VPX		?= default
-
-# Build-dependencies when using system libraries
-NSPR_SYSTEM_BD		= libnspr4-dev (>= 4.9.0)
-CAIRO_SYSTEM_BD		= libcairo2-dev (>= 1.10.0), libpixman-1-dev (>= 0.19.2)
-SQLITE_SYSTEM_BD	= libsqlite3-dev (>= 3.7.10)
-HUNSPELL_SYSTEM_BD	= libhunspell-dev
-VPX_SYSTEM_BD		= libvpx-dev
-NSS_SYSTEM_BD		= libnss3-dev (>= 3.13.2)
-
-# Build-dependencies when using in-tree libraries
-CAIRO_TREE_BD		= libxrender-dev
-
-# Additional build-dependencies
-EXTRA_SYSTEM_BD		= \n\tlibjpeg62-dev,\n\tlibpng12-dev,\n\tzlib1g-dev,\n\tlibbz2-dev,\n\tlibevent-dev,\n\tlibffi-dev (>= 3.0.9)
-EXTRA_DEFAULT_BD	= 
-
-DEFAULT_TREE_LIBS	= CAIRO NSPR NSS SQLITE HUNSPELL VPX
-DEFAULT_SYSTEM_LIBS	=
 
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
@@ -100,9 +71,6 @@ MOZ_IDLDIR		= usr/share/idl/$(MOZ_APP_NAME)
 MOZ_SDKDIR		= usr/lib/$(MOZ_APP_NAME)-devel
 MOZ_ADDONDIR		= usr/lib/$(MOZ_APP_NAME)-addons
 
-NSPR_DEPENDS		:= $(NULL)
-NSS_DEPENDS		:= $(NULL)
-CAIRO_DEPENDS		:= $(NULL)
 DEB_AUTO_UPDATE_DEBIAN_CONTROL	= no
 
 MOZ_PYTHON		:= $(shell which python)
@@ -273,7 +241,9 @@ else
 DEB_DH_GENCONTROL_ARGS_$(MOZ_APP_NAME) := -- -Vsupport:Suggests="$(MOZ_APP_NAME)-gnome-support" $(APP_CONTROL_ARGS)
 endif
 endif
-DEB_DH_GENCONTROL_ARGS_$(MOZ_APP_NAME)-dev := -- -Vnspr:Depends=$(NSPR_DEPENDS) -Vnss:Depends=$(NSS_DEPENDS) -Vcairo:Depends=$(CAIRO_DEPENDS) $(DEV_CONTROL_ARGS)
+ifneq (,$(DEV_CONTROL_ARGS))
+DEB_DH_GENCONTROL_ARGS_$(MOZ_APP_NAME)-dev := -- $(DEV_CONTROL_ARGS)
+endif
 # With GSettings and at-spi2 in 11.10, we no longer rely on gconf for anything
 ifeq (1,$(shell test "$(DISTRIB_VERSION_MAJOR)$(DISTRIB_VERSION_MINOR)" -lt "1110" && echo "1"))
 GCONF_DEPENDS := libgconf2-4
@@ -290,16 +260,6 @@ DEB_DEFINES = 	-DMOZ_LIBDIR="$(MOZ_LIBDIR)" -DMOZ_APP_NAME="$(MOZ_APP_NAME)" -DM
 		-DMOZ_BRANDING_OPTION="$(MOZ_BRANDING_OPTION)" -DTOPSRCDIR="$(CURDIR)" -DDEB_HOST_GNU_TYPE="$(DEB_HOST_GNU_TYPE)" \
 		-DMOZ_ADDONDIR="$(MOZ_ADDONDIR)" -DMOZ_SDKDIR="$(MOZ_SDKDIR)" -DMOZ_DISTDIR="$(MOZ_DISTDIR)" -DMOZ_UPDATE_CHANNEL="$(CHANNEL)" \
 		-DMOZ_OBJDIR="$(MOZ_OBJDIR)" -DDEB_BUILDDIR="$(DEB_BUILDDIR)" -DMOZ_PYTHON="$(MOZ_PYTHON)" -DMOZ_PROFILE_PREFIX=".mozilla/"
-
-SHLIB_OVERRIDE = $(if $(shell test "system" = "$(MOZ_OVERRIDE_SHLIBS)" && echo "1"), $(eval MOZ_USE_$(1) = system), \
-	$(if $(shell test "tree" = "$(MOZ_OVERRIDE_SHLIBS)" && echo "1"), $(eval MOZ_USE_$(1) = tree),))
-DEFINE_DEFAULT_TREE_LIB = $(if $(shell test "system" != "$(MOZ_USE_$(1))" && echo "1"), $(eval DEB_DEFINES += -DMOZ_TREE_$(1)); $(eval MOZ_TREE_$(1) = 1),)
-DEFINE_DEFAULT_SYSTEM_LIB = $(if $(shell test "tree" = "$(MOZ_USE_$(1))" && echo "1"), $(eval DEB_DEFINES += -DMOZ_TREE_$(1)); $(eval MOZ_TREE_$(1) = 1),)
-
-$(foreach lib, $(DEFAULT_TREE_LIBS) $(DEFAULT_SYSTEM_LIBS), $(call SHLIB_OVERRIDE,$(lib)))
-$(foreach lib, $(DEFAULT_TREE_LIBS) $(DEFAULT_SYSTEM_LIBS), $(eval DEB_DEFINES += -DMOZ_USE_$(lib)="$(MOZ_USE_$(lib))"))
-$(foreach lib, $(DEFAULT_TREE_LIBS), $(call DEFINE_DEFAULT_TREE_LIB,$(lib)))
-$(foreach lib, $(DEFAULT_SYSTEM_LIBS), $(call DEFINE_DEFAULT_SYSTEM_LIB,$(lib)))
 
 ifeq (1, $(MOZ_ENABLE_BREAKPAD))
 	DEB_DEFINES += -DMOZ_ENABLE_BREAKPAD
@@ -345,16 +305,6 @@ ifeq (1,$(shell test "$(DISTRIB_VERSION_MAJOR)$(DISTRIB_VERSION_MINOR)" -ge "120
 	DEB_DEFINES += -DMOZ_FREEDESKTOP_ACTIONS
 endif
 
-ifneq (1, $(MOZ_TREE_NSPR))
-	NSPR_DEPENDS = libnspr4-dev
-endif
-ifneq (1, $(MOZ_TREE_CAIRO))
-	CAIRO_DEPENDS = libcairo2-dev
-endif
-ifneq (1, $(MOZ_TREE_NSS))
-	NSS_DEPENDS = libnss3-dev
-endif
-
 DEBIAN_EXECUTABLES = $(MOZ_APP_NAME)/$(MOZ_LIBDIR)/firefox.sh \
 		     $(NULL)
 
@@ -391,15 +341,6 @@ pkgconfig_files = \
 	debian/pkgconfig/mozilla-nspr.pc \
 	$(NULL)
 
-SYSLIBS_BD = $(NULL)
-APPEND_BDS = $(if $(shell test "x$(1)" != "x" && echo "1" ), $(eval SYSLIBS_BD += \n\t$(1),),)
-$(foreach lib, $(DEFAULT_TREE_LIBS) $(DEFAULT_SYSTEM_LIBS), $(if $(shell test "$(MOZ_TREE_$(lib))" != "1" && echo "1"), $(call APPEND_BDS,$($(lib)_SYSTEM_BD)),$(call APPEND_BDS,$($(lib)_TREE_BD))))
-ifeq (system, $(MOZ_OVERRIDE_SHLIBS))
-SYSLIBS_BD += $(EXTRA_SYSTEM_BD)
-else ifneq (tree, $(MOZ_OVERRIDE_SHLIBS))
-SYSLIBS_BD += $(EXTRA_DEFAULT_BD)
-endif
-
 debian/control:: debian/control.in debian/control.langpacks debian/control.langpacks.unavail debian/config/locales.shipped debian/config/locales.all
 	@echo ""
 	@echo "*****************************"
@@ -407,8 +348,7 @@ debian/control:: debian/control.in debian/control.langpacks debian/control.langp
 	@echo "*****************************"
 	@echo ""
 
-	@sed -e 's/@SYSLIBS_BD@/$(SYSLIBS_BD)/g' \
-	     -e 's/@MOZ_APP_NAME@/$(MOZ_APP_NAME)/g' < debian/control.in > debian/control
+	@sed -e 's/@MOZ_APP_NAME@/$(MOZ_APP_NAME)/g' < debian/control.in > debian/control
 
 	@perl debian/build/dump-langpack-control-entries.pl -i $(CURDIR)/debian/config -t $(CURDIR)/debian > debian/control.tmp
 
@@ -512,11 +452,9 @@ GNOME_SUPPORT_FILES = libmozgnome.so
 binary-post-install/$(MOZ_APP_NAME)::
 	$(foreach file,$(GNOME_SUPPORT_FILES),rm -fv debian/$(MOZ_APP_NAME)/$(MOZ_LIBDIR)/components/$(file);) true
 
-ifeq (1, $(MOZ_TREE_NSPR))
 binary-post-install/$(MOZ_APP_NAME)-dev::
 	rm -f debian/$(MOZ_APP_NAME)-dev/$(MOZ_INCDIR)/nspr/md/_linux.cfg
 	dh_link -p$(MOZ_APP_NAME)-dev $(MOZ_INCDIR)/nspr/prcpucfg.h $(MOZ_INCDIR)/nspr/md/_linux.cfg
-endif
 
 common-binary-post-install-indep::
 	@echo ""
@@ -555,12 +493,10 @@ common-binary-fixup-indep::
 		fi \
 	done < $(CURDIR)/debian/config/locales.shipped
 
-ifeq (1, $(MOZ_TREE_NSS))
 binary-predeb/$(MOZ_APP_NAME)::
 	$(foreach lib,libsoftokn3.so libfreebl3.so libnssdbm3.so, \
 	        LD_LIBRARY_PATH=debian/$(MOZ_APP_NAME)/$(MOZ_LIBDIR):$$LD_LIBRARY_PATH \
 	        $(MOZ_DISTDIR)/bin/shlibsign -v -i debian/$(MOZ_APP_NAME)$(MOZ_LIBDIR)/$(lib);)
-endif
 
 common-binary-predeb-arch::
 	$(foreach file,$(DEBIAN_EXECUTABLES),chmod a+x debian/$(file);)
